If the transcoder doesn't process any input, throw an exception [XERCESC-1916]

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@933521 13f79535-47bb-0310-9956-ffa450edef68